[tool.poetry]
name = "sh"
version = "2.0.2"
description = "Python subprocess replacement"
authors = ["Andrew Moffat <arwmoffat@gmail.com>"]
readme = "README.rst"
maintainers = [
    "Andrew Moffat <arwmoffat@gmail.com>",
    "Erik Cederstrand <erik@cederstrand.dk>"
]
homepage = "https://amoffat.github.io/sh/"
repository = "https://github.com/amoffat/sh"
documentation = "https://amoffat.github.io/sh/"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "MIGRATION.md", format = "sdist" },
    { path = "images", format = "sdist" },
    { path = "Makefile", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.5"
black = "^23.1.0"
coveralls = "^3.3.1"
flake8 = "^6.0.0"
rstcheck = "^6.1.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
pytest = "^7.2.1"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
