[bdist_wheel]
universal = 1

[metadata]
name = sh
author = Andrew Moffat
author_email = arwmoffat@gmail.com
maintainer = Andrew Moffat
maintainer_email = arwmoffat@gmail.com
license = MIT
description = Python subprocess replacement
keywords =
    subprocess
    process
    shell
    launch
    program
url = https://github.com/amoffat/sh
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = sh

[flake8]
max-line-length = 120
